syntax = "proto3";
package ipc;

message UserPresence {
  string username = 1;
  string user_id = 2;
  string channel = 3;
  bool is_anonymous = 4;
  bool deleting = 5;
}

message UserPresences { repeated UserPresence presences = 1; }

// Only authenticated connections.
message PresenceEntry {
  string username = 1;
  string user_id = 2;
  repeated string channel = 3;
}

// Request for getting followers of a user
message GetFollowersRequest {
  string user_id = 1;
}

// Response containing list of follower user IDs
message GetFollowersResponse {
  repeated string follower_user_ids = 1;
}

// Request for getting users that a user follows
message GetFollowsRequest {
  string user_id = 1;
}

// Response containing list of user IDs that the user follows
message GetFollowsResponse {
  repeated string follow_user_ids = 1;
}
