// ipc is used for inter-process communication (essentially between the
// socket server (liwords-socket) and the main api server (liwords)
syntax = "proto3";
package liwords;
option go_package = "github.com/domino14/liwords/rpc/api/proto/realtime";

message RegisterRealmRequest {
  string path = 1;
  string user_id = 2;
}

message RegisterRealmResponse {
  // realm should be made obsolete. RegisterRealmResponse should always
  // return a list of realms.
  string realm = 1; // obsolete, remove later.
  repeated string realms = 2;
}

// InitRealmInfo is a request for the API server to send back information
// about that realm back to the user. For example, for the lobby realm,
// we would like lists of active games, chats, etc; for game realms, we would
// like the game history.
message InitRealmInfo {
  string realm = 1;
  string user_id = 2;
}